kubernetes/base/payments-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-api
  namespace: sre-platform
  labels:
    app: payments-api
spec:
  selector:
    app: payments-api
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
