kubernetes/base/payments-api/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payments-api
  namespace: sre-platform
spec:
  podSelector:
    matchLabels:
      app: payments-api
  policyTypes: ["Ingress", "Egress"]
  ingress:
    # Traffic from the dashboard / other workloads
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080
    # Prometheus scraping /actuator/prometheus
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
        - podSelector:
            matchLabels:
              app: dashboard
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: orders-api
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: otel-collector
      ports:
        - protocol: TCP
          port: 4318
    # DNS (kube-dns lives in kube-system)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
